--- a/config.toml
+++ b/config.toml
@@ -229,8 +229,8 @@ pluralizelisttitles = false
     # All testimonials are defined in their own files. You can find example items
     # at 'exampleSite/data/testimonials'.
     # For more information take a look at the README.
-    title = "Testimonials"
-    subtitle = "We have worked with many clients and we always like to hear they come out from the cooperation happy and satisfied. Have a look what our clients said about us."
+    title = "Please read this Senate Testimony to help understand what we are working to prevent- "
+    subtitle = "https://www.aging.senate.gov/imo/media/doc/SCA_Stancik_7_17_19.pdf"
 
 [params.see_more]
     enable = true
@@ -238,7 +238,7 @@ pluralizelisttitles = false
     title = "There are over 50 million senior citizens in the United States today."
     subtitle = "We need YOUR help!  Become a hero today by spreading the word, donating to the HERO fund, or by providing information on current scams. <br>   "
     link_url = "/rewards/"
-    link_text = "When we all work together, we can put an end to scammers."
+    link_text = "Let put an end to scammers!"
 
 [params.clients]
     enable = true
