--- a/config.toml
+++ b/config.toml
@@ -166,10 +166,10 @@ pluralizelisttitles = false
     dropdown_mouse_over = false
 
     disabled_logo = false
-    logo_text = "Universal"
+    logo_text = "Raisee"
 
     logo = "img/logo.png"
-    logo_small = "img/logo-small.png"
+    logo_small = "img/logo.png"
     contact_url = "/contact"
     address = """<p class="text-uppercase"><strong>RAISEE Organization</strong>
         <br>A charitable organization founded by:
